# bcinr

./: AGENTS.md  ALGORITHM_CATALOG.md  ARCHITECTURE.md  BCINR_EXECUTIVE_WHITEPAPER.aux  BCINR_EXECUTIVE_WHITEPAPER.tex  CHANGELOG.md  CLAUDE.md  Cargo.toml  GEMINI.md  Makefile  Makefile.toml  README.md  algorithms_201_300.txt  all_primitives.txt  all_public_symbols.txt  audit_all.sh  check_benches.py  dteam_ref  finish_all_atoms.py  fix_5_files.py  fix_algos.py  fix_doctests.py  fix_for_loops.py  fix_legacy.py  fix_mutant_1.py  fix_syntax.py  fix_u64_stubs.py  fix_u64_stubs2.py  gen_missing.py  generate_algorithms.py  generate_benchmarks.py  generate_catalog.py  generate_real_algorithms.py  implement_101_200.py  implement_201_300.py  implement_51_100.py  maturity_auditor.py  potential_branches.txt  primitives_list.txt  refactor_300.py  (+7 more)
bcinr/: Cargo.toml  libint.rlib  libscan.rlib  test_fix
bcinr-bench/: Cargo.toml
bcinr-bench/benches/: algorithms_101_200.rs  algorithms_1_100.rs  algorithms_201_300.rs  algorithms_301_307.rs  all_300_bench.rs  bcinr_bench.rs  missing_bench.rs  patterns_bench.rs  universe1_bench.rs  universe64_bench.rs
bcinr-core/: Cargo.toml  libcheck_parse_syntax.rlib  libnetwork.rlib  libsketch_test.rlib  libutf8.rlib  network  test_fix.rs
bcinr-core/benches/: bcinr_bench.rs  kernel_bench.rs
bcinr-core/src/: lib.rs
bcinr-core/src/api/: bitset.rs  dfa.rs  fix.rs  int.rs  mask.rs  network.rs  parse.rs  reduce.rs  scan.rs  simd.rs  sketch.rs  utf8.rs
bcinr-core/src/logic/: bitset.rs  dfa.rs  fix.rs  int.rs  mask.rs  mod.rs  network.rs  parse.rs  reduce.rs  scan.rs  simd.rs  sketch.rs  utf8.rs
bcinr/benches/: bcinr_bench.rs  kernel_bench.rs
bcinr/src/: lib.rs
bcinr/src/api/: bitset.rs  dfa.rs  fix.rs  int.rs  mask.rs  network.rs  parse.rs  reduce.rs  scan.rs  simd.rs  sketch.rs  utf8.rs
bcinr/src/logic/: dfa.rs  mask.rs  parse.rs  reduce.rs  scan.rs  sketch.rs
crates/bcinr-api/: Cargo.toml  bitset.rs  fix.rs  int.rs  mask.rs  mod.rs  network.rs  parse.rs  reduce.rs  scan.rs  simd.rs  sketch.rs
crates/bcinr-api/src/: bitset.rs  dfa.rs  fix.rs  int.rs  lib.rs  mask.rs  mod.rs  network.rs  parse.rs  reduce.rs  scan.rs  simd.rs  sketch.rs  utf8.rs
crates/bcinr-logic/: Cargo.toml  bitset.rs  exec.rs  fix.rs  int.rs  mask.rs  mem.rs  mod.rs  network.rs  simd.rs  swar.rs  utf8.rs
crates/bcinr-logic/proptest-regressions/abstractions/: bump_arena.txt
crates/bcinr-logic/proptest-regressions/algorithms/: aabb_intersect_branchless.txt  abs_diff_i64.txt  abs_diff_u64.txt  add_sat_i32.txt  adler32_branchless.txt  aho_corasick_simd_step.txt  ascii_to_lowercase_simd.txt  ascii_to_uppercase_simd.txt  avg_ceil_u64.txt  avg_u64.txt  base32_encode_rfc4648.txt  base64_decode_simd.txt  base64_encode_simd.txt  base85_encode_ascii85.txt  bclr_u64.txt  benes_network_u64.txt  bext_u64.txt  binary_search_v_u32x4.txt  binom_sat_u32.txt  bit_matrix_transpose_64x64.txt  bit_matrix_transpose_8x8.txt  bit_permute_identity_64.txt  bit_permute_step_u64.txt  bit_swap_u64.txt  bit_vector_compress_elias_fano.txt  bitonic_merge_u64x8.txt  bitonic_sort_64u32.txt  bitpacking_decode_u32_k.txt  bitpacking_encode_u32_k.txt  bloom_filter_add_u64.txt  bloom_filter_graph_visited.txt  bloom_filter_intersect.txt  bloom_filter_query_u64.txt  bloom_filter_union.txt  blsi_u64.txt  blsmsk_u64.txt  blsr_u64.txt  bool_slice_from_mask.txt  branchless_priority_queue_pop.txt  branchless_priority_queue_push.txt  (+260 more)
crates/bcinr-logic/src/: bitset.rs  dfa.rs  exec.rs  fix.rs  int.rs  lib.rs  mask.rs  mem.rs  mod.rs  models.rs  network.rs  parse.rs  reduce.rs  scan.rs  simd.rs  sketch.rs  swar.rs  utf8.rs  utils.rs
crates/bcinr-logic/src/abstractions/: bump_arena.rs  epoch_reclamation.rs  lock_free_slab.rs  mod.rs  resumable_fiber.rs  spsc_ring_buffer.rs  utf8_classifier.rs
crates/bcinr-logic/src/algorithms/: aabb_intersect_branchless.rs  abs_diff_i64.rs  abs_diff_u64.rs  add_sat_i32.rs  adler32_branchless.rs  aho_corasick_simd_step.rs  ascii_to_lowercase_simd.rs  ascii_to_uppercase_simd.rs  avg_ceil_u64.rs  avg_u64.rs  base32_encode_rfc4648.rs  base64_decode_chunk4.rs  base64_decode_simd.rs  base64_encode_simd.rs  base85_encode_ascii85.rs  bclr_u64.rs  benes_network_u64.rs  bext_u64.rs  binary_search_v_u32x4.rs  binom_sat_u32.rs  bit_matrix_transpose_64x64.rs  bit_matrix_transpose_8x8.rs  bit_parallel_sort8_u32.rs  bit_permute_identity_64.rs  bit_permute_step_u64.rs  bit_swap_u64.rs  bit_vector_compress_elias_fano.rs  bitonic_merge_u64x8.rs  bitonic_sort_64u32.rs  bitpacking_decode_u32_k.rs  bitpacking_encode_u32_k.rs  bloom_filter_add_u64.rs  bloom_filter_graph_visited.rs  bloom_filter_intersect.rs  bloom_filter_query_u64.rs  bloom_filter_union.rs  blsi_u64.rs  blsmsk_u64.rs  blsr_u64.rs  bool_slice_from_mask.rs  (+268 more)
crates/bcinr-logic/src/autonomic/: autonomic_substrate.rs  kernel.rs  metric_accumulator.rs  mod.rs  packed_key_table.rs  policy_guard.rs  rl_state.rs
crates/bcinr-logic/src/models/: petri.rs  vision_2030.rs
crates/bcinr-logic/src/patterns/: autonomic_arena.rs  bit_transcoder.rs  bitonic_pq.rs  bloom_scan.rs  chacha_sponge.rs  consensus_bft.rs  deterministic_mpmc.rs  hazard_shield.rs  integrity_receipt.rs  matrix_lru.rs  mod.rs  policy_dfa.rs  radix_trie.rs  register_sql.rs  swar_petri.rs  swar_quotient.rs  tests.rs  time_wheel.rs  wait_free_multicast.rs  wcet_fiber.rs
crates/bcinr-logic/src/patterns/universe1/: block.rs  cell.rs  constants.rs  coord.rs  domain.rs  mod.rs  receipt.rs  transition.rs
crates/bcinr-logic/src/patterns/universe64/: README.md  admission.rs  admission_lifecycle.rs  block.rs  boundary.rs  conformance.rs  constants.rs  coord.rs  delta_bus.rs  delta_tape.rs  drift.rs  executor.rs  index_plane.rs  instruction.rs  (+17 more)
crates/bcinr-logic/src/utils/: dense_kernel.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse.rs  utf8.rs
tools/bcinr-bench-auditor/: Cargo.toml
tools/bcinr-bench-auditor/src/: main.rs
tools/bcinr-contract-gate/: Cargo.toml
tools/bcinr-contract-gate/src/: main.rs
tools/bcinr-reporter/: Cargo.toml
tools/bcinr-reporter/src/: main.rs
(+95 files in other folders)
