[package]
name = "bcinr-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
bcinr-core = { path = "../bcinr-core" }

[[bin]]
name = "parse"
path = "fuzz_targets/parse.rs"
test = false
doc = false

[[bin]]
name = "utf8"
path = "fuzz_targets/utf8.rs"
test = false
doc = false
