[package]
name = "bcinr-api"
version = "26.4.22"
edition = "2021"
description = "BranchlessCInRust: Academic-grade branchless algorithm library"
repository = "https://github.com/example/bcinr"
license = "MIT OR Apache-2.0"
rust-version = "1.70"
keywords = ["branchless", "simd", "performance"]
categories = ["algorithms", "no-std"]

readme = "../../README.md"
[dependencies]
bcinr-logic = { path = "../bcinr-logic", version = "26.4.22" }

[features]
alloc = []
std = ["bcinr-logic/std", "alloc"]
