[package]
name = "bcinr-contract-gate"
version = "26.4.21"
edition = "2021"
publish = false

license = "MIT OR Apache-2.0"
repository = "https://github.com/seanchatmangpt/bcinr"
description = "Deterministic branchless substrate for autonomic AGI."
readme = "../../README.md"
[dependencies]
syn = { version = "2.0", features = ["full", "visit"] }
walkdir = "2.4"
quote = "1.0"
