[package]
name = "bcinr-reporter"
version = "26.4.21"
edition = "2021"
publish = false

license = "MIT OR Apache-2.0"
repository = "https://github.com/seanchatmangpt/bcinr"
description = "Deterministic branchless substrate for autonomic AGI."
readme = "../../README.md"
[dependencies]
prettytable-rs = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.9"
